REFACTOR/spark readme regarding submit